<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/fio"
            android:textColorHint="@color/white"
            android:textSize="14sp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/phone_hint"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:boxStrokeColor="@color/white">

            <ru.sigmadigital.maskededittext.MaskedEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:mask="+7(***) *** ** **"
                app:notMaskedSymbol="*" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/e_mail"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:boxStrokeColor="@color/white">

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/count"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:boxStrokeColor="@color/white">

            <EditText
                android:id="@+id/editTextСount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/city"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:boxStrokeColor="@color/white">

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text|textCapWords"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/adress_hint"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:boxStrokeColor="@color/white">

            <EditText
                android:id="@+id/editTextAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text|textCapSentences"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/comment"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:boxStrokeColor="@color/white">

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text|textCapSentences"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/bt_rect"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>