<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_inset">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
                android:text="@string/dialog_title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/dialog_text"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bt_corners"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/dialog_button"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/plus"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bt_oval_red"
        android:clickable="false"
        android:elevation="4dp"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_scan"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintLeft_toLeftOf="@id/cardView"
        app:layout_constraintRight_toRightOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>