<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bt_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bt_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_phone" />

        <ImageView
            android:id="@+id/locate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bt_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_locate" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bt_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bt_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_search"
            android:visibility="gone" />

    </LinearLayout>


    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/action_bar"
        android:background="@color/white"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/mainGray"
        android:textColorHint="@color/lightGray"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_products"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/bt_bottom"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/v_products_act"
                android:layout_width="64dp"
                android:layout_height="2dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/products"
                    android:src="@drawable/ic_products"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/products"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/bt_bottom"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <View
                android:id="@+id/v_news_act"
                android:layout_width="64dp"
                android:layout_height="2dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/news"
                    android:src="@drawable/ic_news"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@id/et_search"
        android:orientation="vertical"/>


    <ImageButton
        android:id="@+id/ar_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt_oval_white"
        android:elevation="4dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_scan"
        android:tint="@color/colorAccent"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>